--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 const { title } = Astro.props;
+import { Icon } from 'astro-icon/components'
 ---
 
 <!doctype html>
@@ -13,8 +14,20 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<header>
-			<div class="container">Este es el encabezado</div>
+		<header class="h-16 flex items-center bg-green-100">
+			<div class="container flex flex-row items-center justify-between  max-w-[1200px] mx-auto">
+				<img src="duolingo logo.svg" alt="">
+				<a class="relative group flex flex-row items-center hover:text-gray-300 text-gray-400 font-extrabold uppercase" href="#">
+					Idioma de la pàgina
+					<Icon name="mdi:chevron-down"/>
+
+					<div class="absolute top-6 hidden group-hover:block">
+						opcion menu
+					</div>
+				</a>
+				
+			</div>
+
 		</header>
 
 		<slot />
@@ -24,36 +37,6 @@ const { title } = Astro.props;
 		</footer>
 	</body>
 </html>
-<style is:global>
-	footer {
-		background: pink;
-		height: 32px;
-
-	}
-	.container {
-		margin: 0 auto;
-		max-width: 1200px;
-		background: orange;
-	}
-	header {
-		background: green;
-		height: 36px;
-	}
-	html,
-	body {
-		margin: 0;
-		padding: 0;
-		font-family: system-ui, sans-serif;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+<style >
+	
 </style>
