--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
-
+/*
 const flags = [
 	{
 		flag:'',
@@ -15,47 +15,12 @@ const flags = [
 		flag:'',
 		name: 'Bandera 3'
 	},
-]
+]*/
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Duolingo">
 	
-	<div class="container">
-		<div class="banner">
-			banner	
-		</div>
-		<div class="langs">
-			{
-				flags.map((flag) => <a href="#">
-						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="m14.303 6-3-2H6V2H4v20h2v-8h4.697l3 2H20V6z"></path></svg>
-						{flag.name}			
-					</a>
-				)
-			}
-		</div>
-	</div>
+	Este es mi contenido 
 </Layout>
 
-<style>
-	.langs{
-		height: 46px;
-		display: flex;
-		& a {
-			transition: background 250ms ease-in-out;
-			display: flex;
-			align-items: center;
-			padding: 0 8px;
-			color: white;
-			text-decoration: none;
-			height: 100%;
-			background: purple;
-		}
-		& a:hover{
-			background: green;
-			
-		}
-	}
-	.banner {
-		height: 320px;
-	}
-</style>
+
