--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ import { Icon } from 'astro-icon/components'
 		<title>{title}</title>
 	</head>
 	<body>
-		<header class="h-16 flex items-center bg-green-100">
+		<header class="h-16 flex items-center">
 			<div class="container flex flex-row items-center justify-between  max-w-[1200px] mx-auto">
 				<img src="duolingo logo.svg" alt="">
 				<a class="relative group flex flex-row items-center hover:text-gray-300 text-gray-400 font-extrabold uppercase" href="#">
@@ -29,11 +29,28 @@ import { Icon } from 'astro-icon/components'
 			</div>
 
 		</header>
-
+		<div class=" mt-32 flex justify-center mx-auto ">
+			<div class="max-w-lg">
+				<img src="/duolingo-promo.svg">
+			</div>
+			<div class=" flex items-center flex-col justify-center w-1/4">
+				<h1 class="text-3xl text-center font-bold text-slate-700 ">
+			     	¡La forma divertida, efectiva y gratis de aprender un idioma!
+				</h1>
+				<div class="mt-10 p-5 hover:cursor-pointer hover:bg-[#7edd36] border-b-4 border-[#559524] rounded-xl text-white font-bold flex justify-center items-center w-80 h-10 bg-[#58cc02] ">
+					EMPIEZA AHORA
+				</div>
+				<div class="mt-3 p-5 hover:cursor-pointer hover:bg-[#e5e5e5] border-2 border-b-4 border-[#c9c5c5] rounded-xl text-[#1CB0F6] font-bold flex justify-center items-center w-80 h-10 bg-[#ffffff] ">
+					YA TENGO UNA CUENTA
+				</div>
+			</div>
+			
+		</div>
+		<Icon name="flagpack:co" size={64}/>
 		<slot />
 
 		<footer  class="container">
-			Este es el pie de pagina
+			
 		</footer>
 	</body>
 </html>
